[metadata]
name = e3moldiffusion
author = Tuan Le
author_email = tuanle@hotmail.de
description = A research module for 3D molecular generation using diffusion methods
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.9.0
setup_requires =
    setuptools_scm
install_requires =

[mypy]
python_version = 3.9
ignore_missing_imports = True